--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "aiohttp>=3.11.18",
     "beautifulsoup4>=4.13.4",
     "fastapi>=0.115.12",
+    "jinja2>=3.1.6",
     "uvicorn>=0.34.2",
 ]
