--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiofiles>=24.1.0",
     "aiohttp>=3.11.18",
     "beautifulsoup4>=4.13.4",
     "fastapi>=0.115.12",
